<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MacAddressesListEditor">
    <TextView android:id="@+id/mac_address_list_editor_textview"
        android:text="@string/mac_addresses_list_editor"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TableRow>
            <TextView android:id="@+id/computer_name_textview"
                android:text="@string/computer_name"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText android:id="@+id/computer_name_edittext"
                android:hint="@string/enter_here_a_computer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    <TableRow>
        <TextView android:id="@+id/mac_address_textview"
            android:text="@string/mac_address"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText android:id="@+id/mac_address_edittext"
            android:hint="@string/enter_here_a_mac_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <Button
        android:id="@+id/add_new_mac_address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/add_new_mac_address"
        />
    <View
        android:id="@+id/this_textview_acts_like_an_html_hr_tag_only"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="5px"
        />
<ListView
    android:id="@+id/mac_address_list_editor_listview"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    />

</TableLayout>