<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/network_addresses_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_this_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/go_to_mac_address_list_editor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mac_address_list_editor"/>
    <Button
        android:id="@+id/send_wake_on_lan_to_all_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_wake_on_lan_to_all_computers_listed_below"
        />


        <ListView android:id="@+id/mac_addresses_table_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</TableLayout>